[gd_scene load_steps=10 format=3 uid="uid://bwsjwr0qd8ctb"]

[ext_resource type="Texture2D" uid="uid://bg4sglhrsiry6" path="res://assets/tilemap/tilemap.png" id="1_a3of6"]
[ext_resource type="Script" path="res://scenes/base/level_base.gd" id="1_t16wb"]
[ext_resource type="PackedScene" uid="uid://baospphrome3n" path="res://scenes/player/player.tscn" id="2_pkcqr"]
[ext_resource type="PackedScene" uid="uid://djg8waxvjd04i" path="res://scenes/objects/bullet_maker.tscn" id="5_rfj7f"]
[ext_resource type="PackedScene" uid="uid://cfugxul2g8si5" path="res://scenes/objects/counter.tscn" id="6_ojdus"]
[ext_resource type="PackedScene" uid="uid://dxx80q45r5pq7" path="res://scenes/base/game_over.tscn" id="9_0ithk"]
[ext_resource type="PackedScene" uid="uid://chsofqm3248w5" path="res://scenes/base/level_clear.tscn" id="10_0xer8"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_n2al8"]
texture = ExtResource("1_a3of6")
separation = Vector2i(1, 1)
texture_region_size = Vector2i(8, 8)
1:2/0 = 0
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
1:4/0 = 0
1:3/0 = 0
0:3/0 = 0
0:4/0 = 0
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, 4, 4, 4, 4, -4, -4, -4)
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
9:1/0 = 0
8:1/0 = 0
7:1/0 = 0
6:1/0 = 0
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
1:1/0 = 0
0:1/0 = 0
0:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
10:3/0 = 0
9:3/0 = 0
8:4/0 = 0
7:4/0 = 0
6:4/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
11:5/0 = 0
10:5/0 = 0
9:5/0 = 0
8:5/0 = 0
7:5/0 = 0
6:5/0 = 0
5:5/0 = 0
5:4/0 = 0
4:4/0 = 0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
2:5/0 = 0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
3:5/0 = 0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
4:5/0 = 0
4:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
1:5/0 = 0
0:5/0 = 0
10:1/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
14:1/0 = 0
13:1/0 = 0
12:1/0 = 0
11:1/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
14:3/0 = 0
13:3/0 = 0
12:3/0 = 0
11:3/0 = 0
12:5/0 = 0
12:4/0 = 0
12:6/0 = 0
11:6/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
14:6/0 = 0
13:6/0 = 0

[sub_resource type="TileSet" id="TileSet_25xyr"]
tile_size = Vector2i(8, 8)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_n2al8")

[node name="LevelBase" type="Node2D"]
script = ExtResource("1_t16wb")

[node name="Tiles" type="Node2D" parent="."]

[node name="TileMapLayer" type="TileMapLayer" parent="Tiles"]
position = Vector2(16, 24)
tile_set = SubResource("TileSet_25xyr")

[node name="BulletMaker" parent="." instance=ExtResource("5_rfj7f")]

[node name="Player" parent="." instance=ExtResource("2_pkcqr")]

[node name="Coins" type="Node2D" parent="."]

[node name="Enemies" type="Node2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="Counter" parent="CanvasLayer" instance=ExtResource("6_ojdus")]

[node name="GameOver" parent="." instance=ExtResource("9_0ithk")]
process_mode = 3
visible = false

[node name="GameOverTimer" type="Timer" parent="GameOver"]
wait_time = 1.5
one_shot = true

[node name="LevelClear" parent="." instance=ExtResource("10_0xer8")]
process_mode = 3
visible = false

[connection signal="coin_collect" from="Player" to="." method="_on_player_coin_collect"]
[connection signal="damage_taken" from="Player" to="." method="_on_player_damage_taken"]
[connection signal="level_won" from="Player" to="." method="_on_player_level_won"]
[connection signal="get_lev_num" from="CanvasLayer/Counter" to="." method="_on_counter_get_lev_num"]
[connection signal="timeout" from="GameOver/GameOverTimer" to="." method="_on_game_over_timer_timeout"]
